[gd_scene load_steps=2 format=3 uid="uid://x20pwuwlmgie"]

[ext_resource type="Script" uid="uid://d38ueuef2mhqn" path="res://scripts/fake_map.gd" id="1_t0s0m"]

[node name="FakeMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t0s0m")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.0
offset_top = 10.0
offset_right = 65.0
offset_bottom = 33.0
grow_horizontal = 2
text = "Map Placeholder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="L1Button" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Lvl 1"

[node name="L2Button" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Lvl 2"

[node name="L3Button" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Lvl 3"

[node name="L4Button" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Lvl 4"

[node name="MenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -26.5
offset_top = -31.0
offset_right = 26.5
grow_horizontal = 2
grow_vertical = 0
text = "Menu"

[node name="SaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -31.0
offset_right = 63.0
grow_vertical = 0
text = "Save"

[node name="LoadButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -31.0
offset_right = -10.0
grow_horizontal = 0
grow_vertical = 0
text = "Load"

[node name="CongratsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -32.0
offset_right = 70.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 2
text = "Congratulations! You beat the game!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SaveLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -44.0
offset_right = 66.0
offset_bottom = -38.0
grow_vertical = 0
text = "Progress saved!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -69.0
offset_top = -44.0
offset_right = -10.0
offset_bottom = -38.0
grow_horizontal = 0
grow_vertical = 0
text = "Progress loaded!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="HBoxContainer/L1Button" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="HBoxContainer/L2Button" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="HBoxContainer/L3Button" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="HBoxContainer/L4Button" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_pressed"]
[connection signal="pressed" from="LoadButton" to="." method="_on_load_pressed"]
